# AntWorks

./: CMakeLists.txt  README.md
game/: grass.cpp  grass.h  inventory.h  item.cpp  item.h  main.cpp  perlin.cpp  perlin.h  player.cpp  player.h  tile.cpp  tile.h
hugworks/: entity.cpp  entity.h  input.h  layer.cpp  layer.h  renderer.cpp  renderer.h  scene.cpp  scene.h
